--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 		<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <!--agregar nombre-->
-    <h1>Bienvenidos a mi sitio web</h1>
-    <h2>Autor: Jose</h2>
+    <div class="contenedor">
+    <center>
+    <h1 style="border: rgb(0, 0, 0); font-size: 25px;">Informe De La Evaluacion De Requisito</h1>
+    </center> 
+    </div>
     <!-- Lista ordenada centrar (ordered list) -->
-    <h3>Menu</h3>
+    
 
     <ul class="lista">
-        <li><a href="calidad.html">Calidad</a></li>
-        <li><a href="costos.html">costos</a></li>
-        <li><a href="fechas.html">Fechas</a></li>
-        <li><a href="nombredelaactividad.html">Nombre de la actividad</a></li>
+        <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(248, 57, 57);">Usuario</a></li>
+        <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(118, 79, 136);">Calidad</a></li>
+        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(118, 79, 136);">costos</a></li>
+        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(97, 50, 136);">Fechas</a></li>
+        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(248, 57, 57);">Nombre de la actividad</a></li>
     </ul>
-
+    </button>
     
 </body>
 </html>
