--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </div>
     <!-- Lista ordenada centrar (ordered list) -->
     
+    <body class="fondo">
+        <img src="img/images.png" alt="imgan del usuario">
 
     <ul class="lista">
         <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(248, 57, 57);">Usuario</a></li>
