--- a/calidad.html
+++ b/calidad.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="css/calidad.css">
 </head>
 <body>
+    <body class="fondo">
     <ul>
         <li><a href="index.html">Volver</a></li>
+        <h1>Introduccion</h1>
+        <br>
+        <p>A continuación veremos como implementar el subproyecto por medios de módulos, teniendo en cuenta el aplicativo para realizarlo, Por otra parte, procederemos a ejecutar el trabajo donde se acordó entre el instructor y aprendices en HTML y CSS.</p>
     <ul>
 </body>
 </html>
