--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
     <!-- Lista ordenada centrar (ordered list) -->
     
     <body class="fondo">
-        <img src="img/images.png" alt="imgan del usuario">
+        <img src="img/images.png" alt="imegan del usuario">
+
+        <p class="parrafo">Mi nombre es Dario Jose Zamora Vargas, tengo 17 años, nací un glorioso martes 17 de enero de 2006, en la ciudad de Garzón Colombia, viví en Rioloro a lo largo de 9 años, después en Isnos Hasta la actualidad. estudio actualmente en el instituto Educativo Jose Eustacio Rivera, en undécimo.</p>
+
+        <p class="parrafo">Soy una persona estudiosa, dedicada, responsable, con metas en la vida, las cuales, quiero cumplirlas, mis principales metas a corto plazo es ser el mejor de la clase, finalizar la educación secundaria y superior, y así seguir con mis estudios, y lograr mis objetivos a largo plazo, como son tener un trabajo estable con mis estudios completamente terminados, y así formar una familia, tener un trabajo estable, e ir más allá de ser un trabajador a formar mi propia constructora.</p>
+
+        <p class="parrafo">Creo que soy una persona abierta a conocer a las personas, me considero divertido y amigable sobre, todo, cuando alguien realmente me importa estoy apoyándolo hasta el final de las cocas en las buenas y las malas.</p>
 
     <ul class="lista">
-        <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(248, 57, 57);">Usuario</a></li>
-        <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(118, 79, 136);">Calidad</a></li>
-        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(118, 79, 136);">costos</a></li>
-        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(97, 50, 136);">Fechas</a></li>
-        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(248, 57, 57);">Nombre de la actividad</a></li>
+        <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(50, 205, 50);">Portada</a></li>
+        <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(50, 205, 50);">Introduccion</a></li>
+        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(50, 205, 50);">Desarrollo</a></li>
+        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(50, 205, 50);">Conclusiones</a></li>
+        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(50, 205, 50);">Bibliografia</a></li>
     </ul>
     </button>
     
