--- a/nombredelaactividad.html
+++ b/nombredelaactividad.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/nombredelaactividad.css">
 </head>
 <body>
+<body class="fondo">
     <ul>
         <li><a href="index.html">Volver</a></li>
     <ul>
