--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     <!-- Lista ordenada centrar (ordered list) -->
     
     <body class="fondo">
-        <img src="img/images.png" alt="imegan del usuario">
-
-        <p class="parrafo">Mi nombre es Dario Jose Zamora Vargas, tengo 17 años, nací un glorioso martes 17 de enero de 2006, en la ciudad de Garzón Colombia, viví en Rioloro a lo largo de 9 años, después en Isnos Hasta la actualidad. estudio actualmente en el instituto Educativo Jose Eustacio Rivera, en undécimo.</p>
-
-        <p class="parrafo">Soy una persona estudiosa, dedicada, responsable, con metas en la vida, las cuales, quiero cumplirlas, mis principales metas a corto plazo es ser el mejor de la clase, finalizar la educación secundaria y superior, y así seguir con mis estudios, y lograr mis objetivos a largo plazo, como son tener un trabajo estable con mis estudios completamente terminados, y así formar una familia, tener un trabajo estable, e ir más allá de ser un trabajador a formar mi propia constructora.</p>
-
-        <p class="parrafo">Creo que soy una persona abierta a conocer a las personas, me considero divertido y amigable sobre, todo, cuando alguien realmente me importa estoy apoyándolo hasta el final de las cocas en las buenas y las malas.</p>
+        <a href="mis-datos.html"><img src="img/images.png" alt="imegan del usuario"></a>
 
     <ul class="lista">
         <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(50, 205, 50);">Portada</a></li>
