--- a/calidad.html
+++ b/calidad.html
@@ -10,10 +10,13 @@
 <body>
     <body class="fondo">
     <ul>
-        <li><a href="index.html">Volver</a></li>
         <h1>Introduccion</h1>
         <br>
         <p>A continuación veremos como implementar el subproyecto por medios de módulos, teniendo en cuenta el aplicativo para realizarlo, Por otra parte, procederemos a ejecutar el trabajo donde se acordó entre el instructor y aprendices en HTML y CSS.</p>
-    <ul>
+    </ul>
+        <ul class="lista">
+        <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
+        </ul>
+        </button>
 </body>
 </html>
