--- a/nombredelaactividad.html
+++ b/nombredelaactividad.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 <body class="fondo">
-    <ul>
-        <li><a href="index.html">Volver</a></li>
-    <ul>
+    <ul class="lista">
+    <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
+    </ul>
+    </button>
 </body>
 </html>
