--- a/usuario.html
+++ b/usuario.html
@@ -33,5 +33,9 @@
     <p>2023</p>
     </p>
     </center>
+    <ul class="lista">
+    <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(70, 130, 180);">Volver</a></li>
+    </ul>
+    </button>
 </body>
 </html>
