--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- Lista ordenada centrar (ordered list) -->
     
     <body class="fondo">
-        <a href="mis-datos.html"><img src="img/images.png" alt="imegan del usuario"></a>
+        <a href="mis-datos.html"><img src="img/imagen1.png" alt="imegan del usuario"></a>
 
     <ul class="lista">
-        <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(50, 205, 50);">Portada</a></li>
-        <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(50, 205, 50);">Introduccion</a></li>
-        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(50, 205, 50);">Desarrollo</a></li>
-        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(50, 205, 50);">Conclusiones</a></li>
-        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(50, 205, 50);">Bibliografia</a></li>
+        <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(210, 180, 140);">Portada</a></li>
+        <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(210, 180, 140);">Introduccion</a></li>
+        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(210, 180, 140);">Desarrollo</a></li>
+        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(210, 180, 140);">Conclusiones</a></li>
+        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(210, 180, 140);">Bibliografia</a></li>
     </ul>
     </button>
     
