--- a/mis-datos.html
+++ b/mis-datos.html
@@ -19,7 +19,7 @@
     <p class="parrafo">Creo que soy una persona abierta a conocer a las personas, me considero divertido y amigable sobre, todo, cuando alguien realmente me importa estoy apoyándolo hasta el final de las cocas en las buenas y las malas.</p>
 
     <ul class="lista">
-    <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(210, 180, 140);">Portada</a></li>
+    <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(210, 180, 140);">Volver</a></li>
     </ul>
     </button>
 </body>
