--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     <ul class="lista">
         <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(210, 180, 140);">Portada</a></li>
         <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(210, 180, 140);">Introduccion</a></li>
-        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(210, 180, 140);">Desarrollo</a></li>
-        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(210, 180, 140);">Conclusiones</a></li>
-        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(210, 180, 140);">Bibliografia</a></li>
+        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(210, 180, 140);">Costos</a></li>
+        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(210, 180, 140);">Fecha de fin</a></li>
+        <button class="boto1"><li><a href="fechas1.html" class="raya" style="color: rgb(210, 180, 140);">Fecha de inicio</a></li>
+        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(210, 180, 140);">Calidad del cafe</a></li>
     </ul>
     </button>
     
