--- a/nombredelaactividad.html
+++ b/nombredelaactividad.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <body class="fondo">
+    <img class="i4" src="img/imagen4.png" alt="imagen con respecto a la calidad del cafe">
+
+    <p>A continuacion en la imagen se reprenseta la calidad del cafe, en donde en cada una de las opciones especifica el ¿Por que? y como mejorarlo.</p>
     <ul class="lista">
     <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
     </ul>
