--- a/costos.html
+++ b/costos.html
@@ -14,7 +14,7 @@
     <p>A continuacion en la imagen se representa el costos de algunos insumos para el ciclo del cafe, donde si damos "clip" nos mostraran la cantidad y precios</p>
     
     <ul class="lista">
-        <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
+        <button class="boto1"><li><a href="mockaps.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
     </ul>
     </button>
 </body>
