--- a/fechas.html
+++ b/fechas.html
@@ -12,7 +12,7 @@
         <img class="i6" src="img/imagen6.png" alt="Imagen de las fechas de fin">
         <p>A continuacion se presentan el modulo de las fechas de Fin</p>
         <ul class="lista">
-            <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
+            <button class="boto1"><li><a href="mockaps.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
         </ul>
         </button>
 </body>
