--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenedor">
     <center>
-    <h1 style="border: rgb(0, 0, 0); font-size: 25px;">Informe De La Evaluacion De Requisito</h1>
+    <h1 style="border: rgb(0, 0, 0); font-size: 25px;">Informe De La Evaluacion De Requisitos</h1>
     </center> 
     </div>
     <!-- Lista ordenada centrar (ordered list) -->
@@ -19,7 +19,7 @@
     </body>
     <div class="espacio">
 
-        <a href="mis-datos.html"><img class="fotos" src="img/imagen1.png " alt="imagen del usuario Dario Jose Zamora Vargas"></a>
+        <a href="mis-datos.html" target="_blank"><img class="fotos" src="img/imagen1.png " alt="imagen del usuario Dario Jose Zamora Vargas"></a>
         <a href="mis-datos2.html"><img class="fotos" src="img/imagen2.png" alt="imagen del usuario Juan Hoyos"></a>
         
     </div>
@@ -27,10 +27,8 @@
     <ul class="lista">
         <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(210, 180, 140);">Portada</a></li>
         <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(210, 180, 140);">Introduccion</a></li>
-        <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(210, 180, 140);">Costos</a></li>
-        <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(210, 180, 140);">Fecha de fin</a></li>
-        <button class="boto1"><li><a href="fechas1.html" class="raya" style="color: rgb(210, 180, 140);">Fecha de inicio</a></li>
-        <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(210, 180, 140);">Calidad del cafe</a></li>
+        <button class="boto1"><li><a href="mockaps.html" class="raya" style="color: rgb(210, 180, 140);">Mockaps</a></li>
+        <button class="boto1"><li><a href="fichas-tecnicas.html" class="raya" style="color: rgb(210, 180, 140);">Formulario</a></li>
     </ul>
     </button>
     
