--- a/nombredelaactividad.html
+++ b/nombredelaactividad.html
@@ -13,7 +13,7 @@
 
     <p>A continuacion en la imagen se reprenseta la calidad del cafe, en donde en cada una de las opciones especifica el ¿Por que? y como mejorarlo.</p>
     <ul class="lista">
-    <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
+    <button class="boto1"><li><a href="mockaps.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
     </ul>
     </button>
 </body>
