--- a/fechas1.html
+++ b/fechas1.html
@@ -14,7 +14,7 @@
         <p>A continuacion se presentan el modulo de las fechas de inicio</p>
         
         <ul class="lista">
-            <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
+            <button class="boto1"><li><a href="mockaps.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
         </ul>
         </button>
     
