--- a/mockaps.html
+++ b/mockaps.html
@@ -9,16 +9,11 @@
 </head>
 <body>
 <body class="fondo">
-<ul class="lista">
-    <button class="boto1"><li><a href="costos.html" class="raya" style="color: rgb(210, 180, 140);">Costos</a></li>
-    <button class="boto1"><li><a href="fechas.html" class="raya" style="color: rgb(210, 180, 140);">Fecha de fin</a></li>
-    <button class="boto1"><li><a href="fechas1.html" class="raya" style="color: rgb(210, 180, 140);">Fecha de inicio</a></li>
-    <button class="boto1"><li><a href="nombredelaactividad.html" class="raya" style="color: rgb(210, 180, 140);">Calidad del cafe</a></li>
-    </ul>
-    </button>
+
+    <img src="img/mockups_500x334.jpg" alt="mockups con sus respectivos modulos">
 
 <ul class="lista">
-    <button class="boto2"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
+    <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(211, 211, 211);">Volver</a></li>
 </ul>
 </button>
 </body>
