--- a/subproyecto.html
+++ b/subproyecto.html
@@ -9,7 +9,10 @@
     <script src="js/subproyecto.js"></script>
 </head>
 <body>
-    <h1>Tarea</h1>
+    <body class="fondo">
+        
+    </body>
+<h1>Ejercicio</h1>
     <ul class="lista">
         <input type="text" id="subproyecto" placeholder="Nombre del subproyecto">
     </ul>
@@ -18,33 +21,30 @@
     <ul class="lista1">
         <input type="text" id="producto1" placeholder="Producto 1">
     </ul>
-
-<ul class="lista1">
-    <input type="number" id="cantidad1" placeholder="ingrese cantidad">
-</ul>
-<ul class="lista1">
-    <input type="number" id="valor1" placeholder="ingrese valor">
-</ul>
-<ul>
-    <p id="Valor1"></p>
-</ul>
+    <ul class="lista1">
+        <input type="number" id="cantidad1" placeholder="ingrese cantidad">
+    </ul>
+    <ul class="lista1">
+        <input type="number" id="valor1" placeholder="ingrese valor">
+    </ul>
+    <ul>
+        <p  class="tamaño" id="Valor1"></p>
+    </ul>
 </div>
-
 
 <div>
     <ul class="lista1">
         <input type="text" id="producto2" placeholder="Producto 2">
     </ul>
-
-<ul class="lista1">
-    <input type="number" id="cantidad2" placeholder="ingrese cantidad">
-</ul>
-<ul class="lista1">
-    <input type="number" id="valor2" placeholder="ingrese valor">
-</ul>
-<ul>
-    <p id="Valor2"></p>
-</ul>
+    <ul class="lista1">
+        <input type="number" id="cantidad2" placeholder="ingrese cantidad">
+    </ul>
+    <ul class="lista1">
+        <input type="number" id="valor2" placeholder="ingrese valor">
+    </ul>
+    <ul>
+        <p class="tamaño" id="Valor2"></p>
+    </ul>
 </div>
 
     <ul class="lista1">
@@ -52,11 +52,30 @@
         <button  onclick="Factura()">Factura</button>
     </ul>
     <!-- respuestas -->
-    <span id="Valor-total">
-    <span id="Valor-sumado">
-    </span>
-    </span>
-</span>
-</span>
+        <p  class="tamaño1" id="Valor-total">
+        <p  class="tamaño" id="Valor-factura0">
+        <p  class="tamaño" id="Valor-factura1">
+        <p  class="tamaño" id="Valor-factura2">
+        <p  class="tamaño" id="Valor-factura3">
+        <p  class="tamaño" id="Valor-factura4">
+        <p  class="tamaño" id="Valor-factura5">
+        <p  class="tamaño" id="Valor-factura6">
+        <p  class="tamaño" id="Valor-factura7">
+        <p  class="tamaño" id="Valor-factura8">
+        <p  class="tamaño1" id="Valor-factura9">
+
+        </p>
+        </p>
+        </p>
+        </p>
+        </p>
+        </p>
+        </p>
+        </p>
+        </p>
+    <ul class="lista">
+        <button class="boto1"><li><a href="index.html" class="raya" style="color: rgb(70, 130, 180);">Volver</a></li>
+    </ul>
+    </button>
 </body>
-</ht
+</html>
