--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <button class="boto1"><li><a href="fichas-tecnicas.html" class="raya" style="color: rgb(210, 180, 140);">Formulario</a></li>
         <button class="boto1"><li><a href="tarea.html" class="raya" style="color: rgb(210, 180, 140);">Tarea 1</a></li>
         <button class="boto1"><li><a href="subproyecto.html" class="raya" style="color: rgb(210, 180, 140);">Subproyecto</a></li>
-    </ul>
+        <button class="boto1"><li><a href="recuperacion.html" class="raya" style="color: rgb(210, 180, 140);">Recuperacion</a></li>
+    
     </ul>
     </button>
     
