--- a/fichaT1.html
+++ b/fichaT1.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Datos Cargados</title>
+    <script defer src="js/fichaT.js"></script>
+    <script defer src="js/fichaT1.js"></script> <!-- pendiente (quitar por si las moscas) -->
 </head>
 <body>
+    <h1>Datos Guardados</h1>
     
 
     <p>Nombre del producto: <j id="dato1"></j></p>
-    <p>Linea de produccion: <j id="dato2"></j></p>
-    <p>Versiones anteriores: <j id="dato3"></j></p>
-    <p>Versiones actuales: <j id="dato4"></j></p>
-    <p>Descripcion general: <j id="dat05"></j></p>
-    <p>Descripcion: <j id="dato6"></j></p>
-    <p>Hadware: <j id="dato7"></j></p>
-    <p>Software: <j id="dato8"></j></p>
-    <p>Otro: <j id="dat9"></j></p>
-    <p>Requerimientos funcionales generales: <j id="dato10"></j></p>
-    <p>Requerimientos adicionales: <j id="dato11"></j></p>
-    <p>Cliente de producto: <j id="dato12"></j></p>
+      <p>Linea de produccion: <j id="dato2"></j></p>
+      <p>Versiones anteriores: <j id="dato3"></j></p>
+      <p>Versiones actuales: <j id="dato4"></j></p>
+      <p>Descripcion general: <j id="dato5"></j></p>
+      <p>Descripcion: <j id="dato6"></j></p>
+      <p>Hadware: <j id="dato7"></j></p>
+      <p>Software: <j id="dato8"></j></p>
+      <p>Otro: <j id="dato9"></j></p>
+      <p>Requerimientos funcionales generales: <j id="dato10"></j></p>
+      <p>Requerimientos adicionales: <j id="dato11"></j></p>
+      <p>Cliente de producto: <j id="dato12"></j></p>
+
+
 </body>
 </html>
