--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="boto1"><li><a href="subproyecto.html" class="raya" style="color: rgb(210, 180, 140);">Subproyecto</a></li>
         <button class="boto1"><li><a href="recuperacion.html" class="raya" style="color: rgb(210, 180, 140);">Recuperacion</a></li>
         <button class="boto1"><li><a href="localstoras.html" class="raya" style="color: rgb(210, 180, 140);">Localstorage</a></li>
-            <button class="boto1"><li><a href="fichaT.html" class="raya" style="color: rgb(210, 180, 140);">Ficha subproyecto</a></li>
+            <button class="boto1"><li><a href="ficha.html" class="raya" style="color: rgb(210, 180, 140);">Ficha subproyecto</a></li>
     
     </ul>
     </button>
