--- a/fichaT.html
+++ b/fichaT.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/fichaT.css">
     <script defer src="js/fichaT.js"></script>
-    <script defer src="js/fichaT1.js"></script> <!-- pendiente (quitar por si las moscas) -->
+    <script src="js/fichaT1.js"></script> <!-- pendiente (quitar por si las moscas) -->
     <title>Ejercicio en js</title>
 </head>
 <body>
