--- a/fichaT1.html
+++ b/fichaT1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datos Cargados</title>
     <script defer src="js/fichaT.js"></script>
-    <script defer src="js/fichaT1.js"></script> <!-- pendiente (quitar por si las moscas) -->
+    <script src="js/fichaT1.js"></script> <!-- pendiente (quitar por si las moscas) -->
 </head>
 <body>
     <h1>Datos Guardados</h1>
