--- a/fichaT.html
+++ b/fichaT.html
@@ -40,7 +40,7 @@
 
    <button onclick="getFicha()">Guardar</button><br><br></p>
 
-     <p>Nombre del producto: <j id="dato1"></j></p>
+     <!-- <p>Nombre del producto: <j id="dato1"></j></p>
       <p>Linea de produccion: <j id="dato2"></j></p>
       <p>Versiones anteriores: <j id="dato3"></j></p>
       <p>Versiones actuales: <j id="dato4"></j></p>
@@ -53,7 +53,7 @@
       <p>Requerimientos adicionales: <j id="dato11"></j></p>
       <p>Cliente de producto: <j id="dato12"></j></p> 
  
-      <button onclick="getcargar()">Cargar datos</button><br><br>  
+      <button onclick="getcargar()">Cargar datos</button><br><br>  --> 
       <a href="fichaT1.html" target="_blank" >Continuar</a>
 </body>
 </html>
