--- a/fichaT.html
+++ b/fichaT.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <h1>FORMATO DE FICHA TECNICA</h1>
-      <h3>Caracteristicas del producto</h3>
- 
+      <h2>Caracteristicas del producto:</h2>
    <h4>Nombre del Producto:</h4>
       <input type="text" id="nom_producto" placeholder="Nombre del Producto"><br><br>
    <h4> Linea de produccion:</h4>
@@ -21,10 +20,18 @@
       <input type="text" id="versiones" placeholder="Numero de Producto"><br><br>
    <h4> Version Actual:</h4>
       <input type="text" id="version" placeholder="Version de Producto"><br><br>
+      <h4> Modulo:</h4>
+      <input type="text" id="modulo" placeholder="Modulo"><br><br>
+
+      <h2>Descripcion del producto:</h2><br><br>
       <h4> Descripcion general:</h4>
-   <input type="text" id="descripcion" placeholder="Descripcion General"><br><br>
+   <input type="text" id="descripcion" placeholder="Descripcion General"><br><br><br>
+
+   <h2>Arquitectura:</h2><br><br>
    <h4> Descripcion:</h4>
       <input type="text" id="descripciones" placeholder="Tipo de Arquitectura"><br><br>
+
+      <h2>Requerimeitnos del producto:</h2><br><br>
    <h4> Hadware:</h4>
       <input type="text" id="productor" placeholder="Requerimiento físico"><br><br>
    <h4> Software:</h4>
@@ -38,7 +45,9 @@
    <h4> Cliente de producto:</h4>
       <input type="text" id="cliente" placeholder="Caracteristicas cliente"><br><br>
 
-   <button onclick="getFicha()">Guardar</button><br><br></p>
+   <button onclick="getFicha()"><a href="fichaT1.html" target="_blank" >Continuar</a></button><br><br>
+   <button onclick="clearlocalStorage()">Borrar</button>
+   
 
      <!-- <p>Nombre del producto: <j id="dato1"></j></p>
       <p>Linea de produccion: <j id="dato2"></j></p>
@@ -54,6 +63,6 @@
       <p>Cliente de producto: <j id="dato12"></j></p> 
  
       <button onclick="getcargar()">Cargar datos</button><br><br>  --> 
-      <a href="fichaT1.html" target="_blank" >Continuar</a>
+      <!-- <a href="fichaT1.html" target="_blank" >Continuar</a> -->
 </body>
 </html>
