--- a/fichaT1.html
+++ b/fichaT1.html
@@ -16,6 +16,7 @@
       <p>Linea de produccion: <j id="dato2"></j></p>
       <p>Versiones anteriores: <j id="dato3"></j></p>
       <p>Versiones actuales: <j id="dato4"></j></p>
+      <p>Modulo: <j id="dato15"></j></p>
       <p>Descripcion general: <j id="dato5"></j></p>
       <p>Descripcion: <j id="dato6"></j></p>
       <p>Hadware: <j id="dato7"></j></p>
@@ -24,7 +25,7 @@
       <p>Requerimientos funcionales generales: <j id="dato10"></j></p>
       <p>Requerimientos adicionales: <j id="dato11"></j></p>
       <p>Cliente de producto: <j id="dato12"></j></p>
-
+      
 
 </body>
 </html>
