--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button class="boto1"><li><a href="usuario.html" class="raya" style="color: rgb(210, 180, 140);">Portada</a></li>
         <button class="boto1"><li><a href="calidad.html" class="raya" style="color: rgb(210, 180, 140);">Introduccion</a></li>
         <button class="boto1"><li><a href="mockaps.html" class="raya" style="color: rgb(210, 180, 140);">Mockaps</a></li>
+        <button class="boto1"><li><a href="idea_negocio.html" class="raya" style="color: rgb(210, 180, 140);">Idea de negocio</a></li>
         <button class="boto1"><li><a href="fichas-tecnicas.html" class="raya" style="color: rgb(210, 180, 140);">Formulario</a></li>
         <button class="boto1"><li><a href="tarea.html" class="raya" style="color: rgb(210, 180, 140);">Tarea 1</a></li>
         <button class="boto1"><li><a href="subproyecto.html" class="raya" style="color: rgb(210, 180, 140);">Subproyecto</a></li>
